--- a/Dragon Ball React Project/dragonball-react/src/components/Home.module.css
+++ b/Dragon Ball React Project/dragonball-react/src/components/Home.module.css
@@ -14,3 +14,50 @@
     display: flex;
     justify-content: center;
 }
+
+
+.componente{
+    background-image: url("https://www.gratistodo.com/dragon-ball-z-wallpapers/")
+}
+.busqYpag{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+.inputB{
+    background: transparent;
+    margin-right: 10px;
+    border:solid white;
+    border-radius: 5px  ;
+    background-color: transparent;
+    color: white;
+    padding: 10px;
+    -webkit-box-shadow: 6px 7px 13px -1px rgba(0,0,0,0.75);
+    -moz-box-shadow: 6px 7px 13px -1px rgba(0,0,0,0.75);
+    box-shadow: 6px 7px 13px -1px rgba(0,0,0,0.75);
+}
+.inputB::placeholder{
+    color: white;
+}
+.link{
+    text-decoration: none;
+}
+.boton{
+    border:solid white;
+    border-radius: 5px  ;
+    background-color: transparent;
+    color: white;
+    padding: 10px;
+    -webkit-box-shadow: 6px 7px 13px -1px rgba(0,0,0,0.75);
+    -moz-box-shadow: 6px 7px 13px -1px rgba(0,0,0,0.75);
+    box-shadow: 6px 7px 13px -1px rgba(0,0,0,0.75);
+}
+.boton:hover{
+    transform: scale(1.08);
+    transition: all 0.5s;
+    cursor: pointer;
+    color: #fff;
+}
+.h1{
+    color: #fff;
+}
