--- a/Dragon Ball React Project/dragonball-react/src/index.css
+++ b/Dragon Ball React Project/dragonball-react/src/index.css
@@ -1,5 +1,7 @@
 body {
+  background-image: url("https://www.xtrafondos.com/wallpapers/casa-kame-de-dragon-ball-3963.jpg");
   margin: 0;
+  background-size: 100%;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
